--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Lana_Del_Rey_%40_SXSW_2012_%288482303270%29.jpg/800px-Lana_Del_Rey_%40_SXSW_2012_%288482303270%29.jpg" alt="Lana Del Rey">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Lana_Del_Rey_-_Love_%28cropped%29.jpg" alt="Lana performing">
+            <img src="https://i.imgur.com/4P3JpLJ.jpg" alt="Lana Del Rey">
+            <img src="https://i.imgur.com/Y7X6j5m.jpg" alt="Lana performing">
         </div>
         
         <h2>Listen to Lana</h2>
